--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564664881669%22%3A%22KlgQB2Ze%22%2C%2261551474205816%22%3A%22xRC5or9G%22%7D",
+        "value": "%7B%2261564664881669%22%3A%22rL3sZj0R%22%2C%2261551474205816%22%3A%22044KTUc6%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.754Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "dpr",
@@ -59,26 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61564664881669",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
-    },
-    {
-        "key": "xs",
-        "value": "27%3A4UB6XveKODGBYg%3A2%3A1726040107%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "locale",
@@ -86,52 +68,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
-    },
-    {
-        "key": "fr",
-        "value": "0AbdJG6jOAE5DAe56.AWUv6X5ucwC_EZlu51h_T32Ckdg.BmuZOG..AAA.0.0.Bm6PQd.AWXK3BIk6UY",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "wd",
-        "value": "1782x3292",
+        "value": "720x1329",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
-        "key": "m_page_voice",
+        "key": "c_user",
         "value": "61564664881669",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
+    },
+    {
+        "key": "fr",
+        "value": "1h1bvFU66chvdYNoi.AWWIj2D8Yis2vjZiwSKrro_5ncU.Bm7T85..AAA.0.0.Bm7T9w.AWWs5DlsiFo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
+    },
+    {
+        "key": "xs",
+        "value": "40%3AHuOgGQXB8W2WLQ%3A2%3A1726824304%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2625%3Btimestamp%3A1726815424",
+        "value": "v2%3Bclient_version%3A2625%3Btimestamp%3A1726898455",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     },
     {
         "key": "fbl_st",
-        "value": "101031863%3BT%3A28780257",
+        "value": "101222749%3BT%3A28781640",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-20T06:57:14.543Z",
-        "lastAccessed": "2024-09-20T06:57:14.543Z"
+        "creation": "2024-09-21T06:01:03.755Z",
+        "lastAccessed": "2024-09-21T06:01:03.755Z"
     }
 ]
