--- a/appstate.json
+++ b/appstate.json
@@ -1,39 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261564664881669%22%3A%22rL3sZj0R%22%2C%2261551474205816%22%3A%22044KTUc6%22%7D",
+        "value": "%7B%22100068903804185%22%3A%22delian1i%22%2C%22100095342989176%22%3A%22u6kfEInO%22%2C%2261556426205089%22%3A%22L80IqZRQ%22%2C%2261562963472651%22%3A%224U1Hocm5%22%2C%22100095349618966%22%3A%22OR9ubYTh%22%2C%22100095016803089%22%3A%22jqruqkre%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
-    },
-    {
-        "key": "datr",
-        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "sb",
-        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
+        "value": "FT5KZvGZKq0GKhRrv9P2CyZX",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B665x360x1.500488042831421",
+        "key": "datr",
+        "value": "dD3VZmHNtfeS_VWFfubuVq4R",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "ps_n",
@@ -50,17 +41,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
-        "key": "dpr",
-        "value": "1.6497068405151367",
+        "key": "vpd",
+        "value": "v1%3B708x360x2.341179847717285",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "locale",
@@ -68,61 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.341179847717285",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "wd",
-        "value": "720x1329",
+        "value": "461x907",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "c_user",
-        "value": "61564664881669",
+        "value": "61566458426645",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "fr",
-        "value": "1h1bvFU66chvdYNoi.AWWIj2D8Yis2vjZiwSKrro_5ncU.Bm7T85..AAA.0.0.Bm7T9w.AWWs5DlsiFo",
+        "value": "1iOndMHKZkXxO9OJp.AWXa5R_DbFpmK98tqMUcLl-g_HQ.Bm4rwl..AAA.0.0.Bm9Gih.AWVFTg9-I8w",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "xs",
-        "value": "40%3AHuOgGQXB8W2WLQ%3A2%3A1726824304%3A-1%3A-1",
+        "value": "22%3AWwYsp3Eb2QeIig%3A2%3A1727293602%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2628%3Btimestamp%3A1727080142",
+        "value": "v2%3Bclient_version%3A2630%3Btimestamp%3A1727293606",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     },
     {
         "key": "fbl_st",
-        "value": "101435441%3BT%3A28784669",
+        "value": "101435586%3BT%3A28788226",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-09-23T08:29:13.330Z",
-        "lastAccessed": "2024-09-23T08:29:13.330Z"
+        "creation": "2024-09-25T19:46:57.902Z",
+        "lastAccessed": "2024-09-25T19:46:57.902Z"
     }
 ]
