--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -19,9 +19,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Clear Cache
+      run: |
+        rm -rf ~/.npm
+        npm cache clean --force
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+        cache: 'npm'
     - run: npm install
     - run: npm start
