--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 		"version": "10.1.1",
 		"description": "A simple Facebook Messenger Bot made by 𝐏𝐫𝐢𝐲𝐚𝐧𝐬𝐡 𝐑𝐚𝐣𝐩𝐮𝐭.",
 		"main": "Priyansh.js",
+	        "engines": {
+		"node": "16.x",
+		"npm": "7.0.0"
+	        },
 		"engines": {
 				"node": "20.x",
 				"npm": "10.0.0"
@@ -57,6 +61,7 @@
 				"express": "^4.19.2",
 				"extract-zip": "^2.0.1",
 				"fb-tools": "0.0.1-security",
+				"fca-priyansh": "^14.0.0",
 				"fca-priyansh": "^16.0.0",
 				"figlet": "^1.5.2",
 				"form-data": "^4.0.0",
@@ -91,6 +96,7 @@
 				"pidusage": "^3.0.0",
 				"ping-monitor": "^0.6.2",
 				"priyansh-fb-downloader": "^2.0.0",
+				"priyansh-ig-downloader": "^2.0.0",
 				"priyansh-ig-downloader": "^2.0.2",
 				"random-cat-img": "^1.0.4",
 				"readline": "^1.3.0",
@@ -116,5 +122,7 @@
 				"yt-search": "^2.10.4",
 				"ytdl-core": "^4.11.2",
 				"zalgo": "0.0.1"
+		},
+		"devDependencies": {}
 		}
 }
